--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,15 +15,15 @@ variables:
 
 before_script:
   - echo -e '\033[36;1m ******* DOCKER LOGIN REGISTRY ******** \033[0m'
-  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
 
 build:
   stage: build
   allow_failure: false
   script:
     - echo -e '\033[36;1m ******* DOCKER BUILD IMAGE ******** \033[0m'
-    - docker build -t $CI_REGISTRY_IMAGE .
-    - docker push $CI_REGISTRY_IMAGE
+    - docker build -t ${CI_REGISTRY_IMAGE} .
+    - docker push ${CI_REGISTRY_IMAGE}
   only:
     - dev
 
@@ -32,10 +32,10 @@ code_quality:
   allow_failure: false
   script:
     - echo -e '\033[36;1m ******* TEST CODE QUALITY ******** \033[0m'
-    - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
+    - export SP_VERSION=$(echo "${CI_SERVER_VERSION}" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
     - docker run --rm
-        --env SOURCE_CODE="$PWD"
-        --volume $PWD:/code
+        --env SOURCE_CODE="${PWD}"
+        --volume ${PWD}:/code
         --volume /var/run/docker.sock:/var/run/docker.sock
         "registry.gitlab.com/gitlab-org/security-products/codequality:${VERSION:-latest}" /code
   artifacts:
@@ -56,7 +56,7 @@ container_scanning:
         --restart on-failure
         arminc/clair-local-scan:${CLAIR_LOCAL_SCAN_VERSION}
     - apk add -U wget ca-certificates
-    - docker pull $CI_REGISTRY_IMAGE
+    - docker pull ${CI_REGISTRY_IMAGE}
     - wget https://github.com/arminc/clair-scanner/releases/download/v8/clair-scanner_linux_amd64
     - mv clair-scanner_linux_amd64 clair-scanner
     - chmod +x clair-scanner
@@ -64,7 +64,7 @@ container_scanning:
     - while( ! wget -q -O /dev/null http://docker:6060/v1/namespaces ) ; do sleep 1 ; done
     - retries=0
     - while( ! wget -T 10 -q -O /dev/null http://docker:6060/v1/namespaces ) ; do sleep 1 ; echo -n "." ; if [ $retries -eq 10 ] ; then echo " Timeout, aborting." ; exit 1 ; fi ; retries=$(($retries+1)) ; done
-    - ./clair-scanner -c http://docker:6060 --ip $(hostname -i) -r gl-container-scanning-report.json -l clair.log -w clair-whitelist.yml $CI_REGISTRY_IMAGE || true
+    - ./clair-scanner -c http://docker:6060 --ip $(hostname -i) -r gl-container-scanning-report.json -l clair.log -w clair-whitelist.yml ${CI_REGISTRY_IMAGE} || true
   artifacts:
     paths: [gl-container-scanning-report.json]
   only:
@@ -75,10 +75,10 @@ container_scanning:
 #   allow_failure: false
 #   script:
 #     - echo -e '\033[36;1m ******* TEST DEPENDENCY SCANNING ******** \033[0m'
-#     - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
+#     - export SP_VERSION=$(echo "${CI_SERVER_VERSION}" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
 #     - docker run --rm
 #         --env DEP_SCAN_DISABLE_REMOTE_CHECKS="${DEP_SCAN_DISABLE_REMOTE_CHECKS:-false}"
-#         --volume $PWD:/code
+#         --volume ${PWD}:/code
 #         --volume /var/run/docker.sock:/var/run/docker.sock
 #         "registry.gitlab.com/gitlab-org/security-products/dependency-scanning:$SP_VERSION" /code
 #   artifacts:
@@ -91,10 +91,10 @@ sast:
   allow_failure: false
   script:
     - echo -e '\033[36;1m ******* TEST SAST ******** \033[0m'
-    - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
+    - export SP_VERSION=$(echo "${CI_SERVER_VERSION}" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
     - docker run --rm
         --env SAST_CONFIDENCE_LEVEL="${SAST_CONFIDENCE_LEVEL:-3}"
-        --volume $PWD:/code
+        --volume ${PWD}:/code
         --volume /var/run/docker.sock:/var/run/docker.sock
         "registry.gitlab.com/gitlab-org/security-products/sast:$SP_VERSION" /app/bin/run /code
   artifacts:
@@ -107,9 +107,9 @@ license_management:
   allow_failure: false
   script:
     - echo -e '\033[36;1m ******* TEST LICENSE MANAGEMENT ******** \033[0m'
-    - export LICENSE_MANAGEMENT_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
+    - export LICENSE_MANAGEMENT_VERSION=$(echo "${CI_SERVER_VERSION}" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
     - docker run --rm
-        --volume $PWD:/code
+        --volume ${PWD}:/code
         "registry.gitlab.com/gitlab-org/security-products/license-management:$LICENSE_MANAGEMENT_VERSION" analyze /code
   artifacts:
     paths: [gl-license-management-report.json]
@@ -121,8 +121,8 @@ test:
   allow_failure: false
   script:
     - echo -e '\033[36;1m ******* TEST RUN ******** \033[0m'
-    - docker pull $CI_REGISTRY_IMAGE
-    - docker run --rm $CI_REGISTRY_IMAGE
+    - docker pull ${CI_REGISTRY_IMAGE}
+    - docker run --rm ${CI_REGISTRY_IMAGE}
         cupp --version
   only:
     - dev
@@ -131,16 +131,12 @@ staging:
   stage: staging
   when: on_success
   allow_failure: false
+  image: alexandreoda/gitlab_auto_merge_request
   script:
-    - echo -e '\033[36;1m ******* STAGING ******** \033[0m'
+    - echo -e '\033[36;1m ******* OPENING MERGE REQUEST ******** \033[0m'
+    - merge-request.sh
   only:
-    - merge_requests
-
-enable_merge:
-  only:
-    - merge_requests
-  script:
-    - echo true
+    - dev
 
 deploy:
   stage: deploy
